# coffee-analytics-agent

./: .gitignore  LICENSE  README.md  app.yaml  pyproject.toml  requirements.txt  streamlit_app.py
agent_server/: agent.py
data_generation/: generate_data.py
notebooks/: 01_ingest.py  02_silver.py  02_silver.py.ipynb  03_gold.py  10_register_tools.py
src/: config.py
src/agent/: graph.py  nodes.py  state.py  tools.py
src/tools/: build_control_group.py  check_parallel_trends.py  estimate_lift.py  query_metric.py
tests/: test_build_control_group.py  test_check_parallel_trends.py  test_estimate_lift.py  test_query_metric.py
