[project]
name = "coffee-analytics"
version = "0.1.0"
description = "Coffee shop analytics agent"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.40.0",
    "anthropic>=0.40.0",
    "plotly>=5.0.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
]

[tool.uv]
default-groups = ["dev"]
